# adX

./: CMakeLists.txt  README.md  adxFormat.md  compileAndRun.bat  compileAndRun.sh  context.md  dev.sh  example.adx  plan.md
.clinerules/: audio-dsp-safety.md  workflow-progress.md
include/: AdxParser.h  AudioData.h  AudioEngine.h  SequencerUI.h
src/: AdxParser.cpp  AudioEngine.cpp  SequencerUI.cpp  main.cpp
